# motion-core

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  example.tsx  nx.json  package.json  prettier.config.cjs  tsconfig.base.json  tsconfig.eslint.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  component_request.yml  feature_request.yml
.github/workflows/: build-cli.yml  cli-e2e.yml  coverage.yml  deploy-docs.yml
.playwright-mcp/: page-2026-04-25T19-58-28-559Z.yml  page-2026-04-25T19-58-37-394Z.yml
apps/docs/: .gitignore  package.json  project.json  svelte.config.js  vercel.json
apps/docs/src/: app.d.ts  app.html  hooks.server.ts
apps/docs/src/lib/: index.ts
apps/docs/src/lib/docs/: generated-manifest.ts  manifest.ts  metadata.ts
apps/docs/src/lib/stores/: package-manager.svelte.ts
apps/docs/src/lib/utils/: highlighter.ts  search.ts
apps/docs/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  layout.css
apps/docs/src/routes/docs/: +layout.svelte  +layout.ts
apps/docs/src/routes/llms.txt/: +server.ts
apps/docs/src/routes/robots.txt/: +server.ts
apps/docs/src/routes/sitemap.xml/: +server.ts
apps/docs/static/: site.webmanifest
apps/docs/static/previews/split-hover/: preview.mov
apps/docs/static/previews/split-reveal/: preview.mov
apps/docs/static/registry/: components.json  registry.json
apps/docs/static/registry/schema/: config-schema.json
apps/web/: .gitignore  eslint.config.js  package.json  project.json  svelte.config.js  vite.config.ts  wrangler.jsonc
apps/web/scripts/: patch-cloudflare-worker-wasm.mjs
apps/web/src/: app.html
apps/web/src/lib/: index.ts
apps/web/src/lib/config/: branding.ts  docs-ui.ts  navigation.ts  site.ts
apps/web/src/lib/docs/: generated-manifest.ts  manifest.ts  metadata.ts  new-badges.ts
apps/web/src/lib/server/: github.ts
apps/web/src/lib/stores/: package-manager.svelte.ts  theme.svelte.ts
apps/web/src/lib/utils/: highlighter.ts  search.ts
apps/web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
apps/web/src/routes/docs/: +layout.svelte  +layout.ts  +page.ts
apps/web/static/registry/: components.json  registry.json
fixtures/sveltekit-minimal/: package-lock.json  package.json
motion-core-cli/: Cargo.toml
motion-core-cli/crates/cli/: Cargo.toml  project.json
motion-core-cli/crates/cli/src/: context.rs  deps.rs  main.rs  reporter.rs  style.rs
motion-core-cli/crates/cli/src/commands/: add.rs  cache.rs  init.rs  list.rs  mod.rs
motion-core-cli/crates/core/: Cargo.toml
motion-core-cli/crates/core/src/: cache.rs  components.rs  config.rs  context.rs  deps.rs  errors.rs  lib.rs  paths.rs  pkg_manager.rs  project.rs  registry.rs  workspace.rs
motion-core-cli/crates/core/src/operations/: add.rs  cache.rs  init.rs  list.rs  mod.rs
motion-core-cli/js/: CHANGELOG.md  README.md  package.json
scripts/: build-and-link.sh  build-registry.ts  ci-build.sh  sync-docs.ts  validate-navigation.ts  validate-registry.ts
scripts/e2e/: run-cli-fixture.mjs
(+291 files in other folders)
